test/readonly/fail/mixed_array24.v3
//@execute 0=312; 5=1032; -987345=-142177368
//@heap-size=50000
def main(a: int) -> int {
	var sum = 0;
	for (j < 3) {
		var x = Array<(Array<int>, Array<int>)>.new(16);
		for (i < x.length) {
			x[i] = ([a, a + i], [a - 1]);
		}
		var y: array<(array<int>, array<int>)> = x;
		for (t in y) {
			for (e in t.0) sum += e;
			for (e in t.1) sum += e;
		}
	}
	return sum;
}
